--- a/frontend/src/app/layout/items/items.component.html
+++ b/frontend/src/app/layout/items/items.component.html
@@ -16,6 +16,18 @@
             <button color="primary" class="margin" mat-raised-button (click)="openItemsCategory()">
                 Add Categories
             </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_download</mat-icon>
+                Download
+            </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_download</mat-icon>
+                Final Sheet
+            </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_upload</mat-icon>
+                Upload
+            </button>
 
         </div>
         <div>
