--- a/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/sales-quotation.component.html
@@ -21,7 +21,10 @@
             <button color="primary" class="margin" mat-raised-button (click)="getItems()">
                 Search
             </button>
-
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_download</mat-icon>
+                Download
+            </button>
             <button color="primary" class="margin" mat-raised-button *ngIf="!isShow"
                 (click)="onAddNewCreateQuotation()">
                 Add Create Qutation
