--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -12,6 +12,10 @@
             <button color="primary" class="margin" mat-raised-button (click)="onAddNewCdf()">
                 Add CDF
             </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_download</mat-icon>
+                Download
+            </button>
 
         </div>
         <div>
@@ -21,7 +25,8 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
 
             <ng-container matColumnDef="hashtag">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
@@ -89,10 +94,12 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn" (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
+                        (click)="confirmDialog(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
                     </button>
                 </td>
@@ -102,7 +109,8 @@
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
 
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
