--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -9,13 +9,19 @@
             <button color="primary" class="margin" mat-raised-button (click)="getCustomers()">
                 Search
             </button>
-
             <button color="primary" mat-raised-button (click)="onAddNewCustomers()">
                 Add Customers
             </button>
-
             <button color="primary" class="margin" mat-raised-button (click)="openTires()">
                 Tiers
+            </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_download</mat-icon>
+                Download
+            </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_upload</mat-icon>
+                Upload
             </button>
         </div>
         <div>
@@ -25,86 +31,78 @@
     </div>
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company" matSortDirection="asc">
-
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
+            matSortDirection="asc">
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.company }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="first_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.first_name }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.address }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.email }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="mobile_no">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.mobile_no }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="due_limit">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.due_limit | currency: 'INR' }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="balance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Balance</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.balance | currency: 'INR' }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="other">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Other</th>
                 <td mat-cell *matCellDef="let element">{{ element.other }}</td>
             </ng-container>
-
             <ng-container matColumnDef="tier_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Tier</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.tier_name }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button  *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewCustomers(element)">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewCustomers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}" color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
-
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
