--- a/frontend/src/app/layout/suppliers/suppliers.component.html
+++ b/frontend/src/app/layout/suppliers/suppliers.component.html
@@ -7,68 +7,71 @@
                 <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getSuppliers()">
             </mat-form-field>
             <button color="primary" class="margin" mat-raised-button (click)="getSuppliers()">
-            Search
-        </button>
-
+                Search
+            </button>
             <button color="primary" class="margin" mat-raised-button (click)="onAddNewSuppliers()">
-            Add Suppliers
-        </button>
+                Add Suppliers
+            </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_download</mat-icon>
+                Download
+            </button>
+            <button color="primary" class="margin" mat-raised-button>
+                <mat-icon>cloud_upload</mat-icon>
+                Upload
+            </button>
         </div>
-
         <div>
-            <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active</mat-slide-toggle>
+            <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
+            </mat-slide-toggle>
         </div>
     </div>
-
     <br />
     <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id" matSortDirection="asc">
-
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id"
+            matSortDirection="asc">
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.company }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="due_limit">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Due Limit</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.due_limit | currency: 'INR' }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="balance">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Balance</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.balance | currency: 'INR' }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="other">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Other</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.other }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary" type="button" (click)="onEditNewSuppliers(element)">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewSuppliers(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}" color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
-
-        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
+        <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
+            (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
 </div>
