--- a/frontend/src/app/layout/transfer/transfer.component.html
+++ b/frontend/src/app/layout/transfer/transfer.component.html
@@ -9,50 +9,43 @@
             <button color="primary" class="margin" mat-raised-button (click)="getTransfer()">
             Search
         </button>
-
             <button color="primary" class="margin" mat-raised-button (click)="onAddNewUser()">
             Add Transfer
         </button>
+        <button color="primary" class="margin" mat-raised-button>
+            <mat-icon>cloud_download</mat-icon>
+            Download
+        </button>
         </div>
-
         <div>
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active</mat-slide-toggle>
         </div>
     </div>
-
     <br />
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="id" matSortDirection="asc">
-
-
             <ng-container matColumnDef="date">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.date | date : 'medium'}}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="description">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.description }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="amount">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Amount</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.amount | currency: 'INR' }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="user_name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>User</th>
                 <td mat-cell *matCellDef="let element">{{ element.user_name }}</td>
             </ng-container>
-
-
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
@@ -64,11 +57,9 @@
                     </button>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
-
         <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
     </div>
