add box ui fixed

--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
@@ -13,3 +13,14 @@
         width: 100%;
     }
 }
+.item-form {
+
+    .box{
+        display: flex;
+    }
+    .block{
+        margin-right: 35px;
+        margin-left: 35px;
+      display: table-caption;
+    }
+  }
