--- a/frontend/src/app/layout/customers/add-customers/add-customers.component.scss
+++ b/frontend/src/app/layout/customers/add-customers/add-customers.component.scss
@@ -12,4 +12,12 @@
     .input {
         width: 100%;
     }
+    .box{
+        display: flex;
+    }
+    .block{
+        margin-right: 35px;
+        margin-left: 35px;
+
+    }
 }
