--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -4,9 +4,9 @@
         <div>
             <mat-form-field>
                 <mat-label>Search...</mat-label>
-                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getItems()">
+                <input matInput type="text" [(ngModel)]="tableParams.search" (keyup.enter)="getCdf()">
             </mat-form-field>
-            <button color="primary" class="margin" mat-raised-button (click)="getItems()">
+            <button color="primary" class="margin" mat-raised-button (click)="getCdf()">
                 Search
             </button>
             <button color="primary" class="margin" mat-raised-button (click)="onAddNewCdf()">
@@ -32,6 +32,13 @@
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.hashtag}}
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                <td mat-cell *matCellDef="let element">
+                    {{ element.email }}
                 </td>
             </ng-container>
 
@@ -94,12 +101,11 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                        (click)="onEditNewCustomers(element)">
+                    <button *ngIf="tableParams.active"  mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
+                        (click)="onEditNewCdf(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="Click to Delete" color="warn"
-                        (click)="confirmDialog(element.id)">
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}" color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">delete</mat-icon>
                     </button>
                 </td>
