--- a/frontend/src/app/layout/cdf/cdf.component.scss
+++ b/frontend/src/app/layout/cdf/cdf.component.scss
@@ -1,3 +1,6 @@
+.mat-elevation-z8{
+    max-width: 100%;
+}
 table {
     width: 100%;
 }
@@ -21,8 +24,10 @@ table {
 th {
     color: rgb(0, 0, 0);
     font-size: 16px;
+
 }
 
 td {
     color: rgb(73 70 70 / 87%);
+
 }
