--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -16,7 +16,6 @@
                 <mat-icon>cloud_download</mat-icon>
                 Download
             </button>
-
         </div>
         <div>
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
@@ -27,94 +26,89 @@
     <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" matSortActive="company"
             matSortDirection="asc">
-
             <ng-container matColumnDef="hashtag">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.hashtag}}
                 </td>
             </ng-container>
-
-            <ng-container matColumnDef="email">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.email }}
-                </td>
-            </ng-container>
-
             <ng-container matColumnDef="company">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.company }}
+                    <b> {{ element.company }} </b> <br> {{ element.date }}
                 </td>
             </ng-container>
-
+            <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let element">
+                </td>
+            </ng-container>
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.name }}
+                    <b> {{ element.name }} </b> <br> {{ element.email }}
                 </td>
             </ng-container>
-
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let element">
+                </td>
+            </ng-container>
             <ng-container matColumnDef="reference">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Reference </th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.reference }}
+                    <b> {{ element.reference }}</b> <br> {{ element.reference_person }}
                 </td>
             </ng-container>
-
+            <ng-container matColumnDef="reference_person">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+                <td mat-cell *matCellDef="let element">
+                </td>
+            </ng-container>
             <ng-container matColumnDef="brands">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Brands </th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.brands }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="display_names">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Display Names</th>
                 <td mat-cell *matCellDef="let element">
                     {{ element.display_names }}
                 </td>
             </ng-container>
-
             <ng-container matColumnDef="platforms">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Platforms</th>
                 <td mat-cell *matCellDef="let element">{{ element.platforms }}</td>
             </ng-container>
-
             <ng-container matColumnDef="address">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
                 <td mat-cell *matCellDef="let element">{{ element.address }}</td>
             </ng-container>
-
             <ng-container matColumnDef="mobile">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile</th>
                 <td mat-cell *matCellDef="let element">{{ element.mobile }}</td>
             </ng-container>
-
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
                 <td mat-cell *matCellDef="let element">{{ element.status }}</td>
             </ng-container>
-
-
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button *ngIf="tableParams.active"  mat-icon-button matTooltip="Click to Edit" color="primary" type="button"
-                        (click)="onEditNewCdf(element)">
+                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                        type="button" (click)="onEditNewCdf(element)">
                         <mat-icon aria-label="Edit">edit</mat-icon>
                     </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"  color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
                         <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
                     </button>
                 </td>
             </ng-container>
-
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let element; columns: displayedColumns"></tr>
         </table>
-
         <mat-paginator #paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="defaultPageSize" showFirstLastButtons
             (page)="pageChanged($event)" [length]="+totalRows" aria-label="Select page of elements">
         </mat-paginator>
