--- a/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
+++ b/frontend/src/app/layout/sales-quotation/create-quotation/create-quotation.component.html
@@ -3,7 +3,7 @@
     <mat-divider></mat-divider>
     <br>
     <form [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-        <div class="box">
+        <div class="box row-1">
             <!-- tier start -->
             <div class="width">
                 <mat-form-field>
@@ -49,7 +49,7 @@
         <mat-divider></mat-divider>
         <br>
         <!-- Item Name start -->
-        <div class="box">
+        <div class="box row-2">
             <div class="width">
 
                 <mat-form-field>
