--- a/frontend/src/app/layout/cdf/cdf.component.html
+++ b/frontend/src/app/layout/cdf/cdf.component.html
@@ -12,7 +12,8 @@
             </button>
             <mat-form-field class="margin">
                 <mat-label>Select CDF</mat-label>
-                <mat-select name="cdf" (selectionChange)="onCdfStatusChange($event)" [value]="'Unverified'">
+                <mat-select name="cdf" (selectionChange)="onCdfStatusChange($event)" [value]="'Unverified'"
+                    [(ngModel)]="customerStatus">
                     <mat-option *ngFor="let cdf of cdfes" [value]="cdf.value">
                         {{cdf.value}}
                     </mat-option>
@@ -25,6 +26,7 @@
                 <mat-icon>cloud_download</mat-icon>
                 Download
             </button>
+
         </div>
         <div>
             <mat-slide-toggle color="primary" (change)="toggleType()" [checked]="tableParams.active">Active
@@ -101,21 +103,28 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef>Actions</th>
                 <td mat-cell *matCellDef="let element">
-                    <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
-                        type="button" (click)="onEditNewCdf(element)">
-                        <mat-icon aria-label="Edit">edit</mat-icon>
-                    </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
-                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
-                        <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}</mat-icon>
-                    </button>
-                    <button mat-icon-button matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
-                        color="{{tableParams.active? 'warn': 'primary'}}" (click)="confirmDialog(element.id)">
-                        <mat-icon aria-label="Delete">delete</mat-icon>
-                    </button>
-                    <button mat-icon-button color="primary" (click)="changeCdfStatus(element.id)">
-                        <mat-icon>thumb_up</mat-icon>
-                    </button>
+                    <ng-container>
+
+                        <button *ngIf="tableParams.active" mat-icon-button matTooltip="Click to Edit" color="primary"
+                            type="button" (click)="onEditNewCdf(element)">
+                            <mat-icon aria-label="Edit">edit</mat-icon>
+                        </button>
+                        <button mat-icon-button
+                            matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                            color="{{tableParams.active? 'warn': 'primary'}}" (click)="changeStatus(element.id)">
+                            <mat-icon aria-label="Delete">{{tableParams.active? 'visibility_off': 'visibility'}}
+                            </mat-icon>
+                        </button>
+                        <button mat-icon-button
+                            matTooltip="{{tableParams.active? 'Click to de-active': 'Click to Active'}}"
+                            color="{{tableParams.active? 'warn': 'primary'}}" (click)="confirmDialog(element.id)">
+                            <mat-icon aria-label="Delete">delete</mat-icon>
+                        </button>
+                        <button mat-icon-button color="primary" (click)="changeCdfStatus(element.id)">
+                            <mat-icon>thumb_up</mat-icon>
+                        </button>
+
+                    </ng-container>
 
                 </td>
             </ng-container>
