--- a/frontend/src/app/layout/items/add-item/add-item.component.scss
+++ b/frontend/src/app/layout/items/add-item/add-item.component.scss
@@ -1,39 +1,49 @@
 .item-form {
-  mat-form-field {
-    margin-right: 50px;
-  }
-  .box{
-      display: flex;
-  }
-  .block{
-    display: table-caption;
-  }
+    .box {
+        display: flex;
+
+        mat-form-field {
+            margin: 0 15px 0 15px;
+            width: 159px;
+        }
+    }
+
+    .block {
+        display: table-caption;
+    }
+
+    .error {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 }
 
 .supplier_details_table {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
+    .box {
+        display: flex;
 
-  .add_button {
-    height: 35px;
-    width: 90px;
-    margin-top: 10px;
-  }
+        mat-form-field {
+            margin: 0 15px 0 15px;
+            width: 250px;
+        }
+    }
 
-  mat-form-field {
-    width: 168px;
-  }
+    .add_button {
+        height: 35px;
+        width: 90px;
+        margin-top: 10px;
+    }
 }
+
 table {
-  width: 100%;
-  th {
-    color: rgb(0, 0, 0);
-    font-size: 16px;
-  }
+    width: 100%;
 
-  td {
-    color: rgb(73 70 70 / 87%);
-  }
+    th {
+        color: rgb(0, 0, 0);
+        font-size: 16px;
+    }
+
+    td {
+        color: rgb(73 70 70 / 87%);
+    }
 }
-
