mat chip added in cdf table

--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.html
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.html
@@ -108,7 +108,7 @@
             <div class="box">
                 <!-- List of Brands start -->
                 <div class="block">
-                    <mat-form-field>
+                    <!-- <mat-form-field>
                         <mat-label>List of Brands</mat-label>
                         <input matInput formControlName="brands" />
                     </mat-form-field>
@@ -119,7 +119,33 @@
     ">
                             <span class="error">List of Brands is Required</span>
                         </ng-container>
+                    </div>  -->
+                    <!-- -->
+                    <mat-form-field class="example-chip-list" >
+                        <mat-label>Favorite Fruits</mat-label>
+                        <mat-chip-list #chipList aria-label="Fruit selection">
+                          <mat-chip *ngFor="let fruit of fruits" [selectable]="selectable" [removable]="removable" (removed)="remove(fruit)">
+                            {{fruit.name}}
+
+                              <mat-icon *ngIf="removable">cancel</mat-icon>
+                          </mat-chip>
+                          <input placeholder="New brand..."
+                          formControlName="brands"
+                                 [matChipInputFor]="chipList"
+                                 [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                                 [matChipInputAddOnBlur]="addOnBlur"
+                                 (matChipInputTokenEnd)="add($event)">
+                        </mat-chip-list>
+                      </mat-form-field>
+                      <div>
+                        <ng-container *ngIf="
+      formGroup.controls.brands.touched &&
+      !formGroup.controls.brands.value
+    ">
+                            <span class="error">List of Brands is Required</span>
+                        </ng-container>
                     </div>
+                      <!--  -->
                 </div>
                 <!-- List of Display Names start -->
                 <div class="block">
