--- a/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
+++ b/frontend/src/app/layout/cdf/add-cdf/add-cdf.component.scss
@@ -25,3 +25,10 @@
         display: table-caption;
     }
 }
+.example-chip-list{
+    width: 100%;
+    mat-icon{
+        color: #e74747;
+        padding-left: 5px;
+    }
+}
