--- a/frontend/src/app/layout/customers/customers.component.html
+++ b/frontend/src/app/layout/customers/customers.component.html
@@ -39,10 +39,10 @@
                     {{ element.company }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="first_name">
+            <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>First Name</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.first_name }}
+                    {{ element.name }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="address">
@@ -57,10 +57,10 @@
                     {{ element.email }}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="mobile_no">
+            <ng-container matColumnDef="mobile">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</th>
                 <td mat-cell *matCellDef="let element">
-                    {{ element.mobile_no }}
+                    {{ element.mobile }}
                 </td>
             </ng-container>
             <ng-container matColumnDef="due_limit">
